added all files

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h1>Lasles<b>VPN</b></h1>
             </div>
             <button class="mobile-hamburger">
-                <i class="fa-solid fa-bars menu-icon" onclick="togglemenu"></i>
+                <i class="fa-solid fa-bars menu-icon" onclick="togglemenu()"></i>
             </button>
             <div class="navlink">
                 <ul>
