index.html and style.css updated

--- a/index.html
+++ b/index.html
@@ -395,7 +395,6 @@
                                 <i class="fa-brands fa-instagram"></i>
                             </a>
                         </div>
-                        <span>©2025LaslesVPN</span>
                     </div>
                     <div class="more-com">
                         <h1>Product</h1>
@@ -424,8 +423,15 @@
             </div>
         </div>
 
-        <div class="coder">
-            <h1>Developed By @Bhavesh-suthar</h1>
+        <div class="container">
+            <div class="coder">
+                <div class="developer-name">
+                    <h1>Developed By @Bhavesh-suthar</h1>
+                </div>
+                <div class="copyright">
+                    <span>©2025LaslesVPN</span>
+                </div>
+            </div>
         </div>
     </footer>
 
