image and style.css

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
                     <li><a href="#">Testimonials</a></li>
                     <li><a href="#">Help</a></li>
                     <li><a href="#">Sign In</a></li>
-                    <li><a href="#">Sign Up</a></li>
+                    <li><a href="#">
+                            <button>Sign Up</button>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -168,7 +171,7 @@
                                     <p>Works on All Devices</p>
                                 </div>
                             </div>
-                            <div class="free-amount" id="subscribe-type">
+                            <div class="premium-plan" id="subscribe-type">
                                 <p>Free</p>
                                 <a href="#">
                                     <button>Select</button>
@@ -204,7 +207,7 @@
                                     <p>Connect Anyware</p>
                                 </div>
                             </div>
-                            <div class="standard-plan" id="subscribe-type">
+                            <div class="premium-plan" id="subscribe-type">
                                 <p>Rs. 766.00 <span>/ mo</span></p>
                                 <a href="#">
                                     <button>Select</button>
@@ -268,12 +271,22 @@
                         <img src="img/Huge Global.png" alt="map">
                     </div>
                 </div>
-                <div class="client">
-                    <img src="img/Netflix-logo.png" alt="Netflix-logo">
-                    <img src="img/Reddit-Logo.png" alt="Reddit-Logo">
-                    <img src="img/Amazon-Logo.png" alt="Amazon-Logo">
-                    <img src="img/discord-logo.png" alt="discord-logo">
-                    <img src="img/Spotify-Logo.png" alt="Spotify-Logo">
+                <div class="multiple-items social-client slider">
+                    <div class="client">
+                        <img src="img/Netflix-logo.png" alt="Netflix-logo">
+                    </div>
+                    <div class="client">
+                        <img src="img/Reddit-Logo.png" alt="Reddit-Logo">
+                    </div>
+                    <div class="client">
+                        <img src="img/Amazon-Logo.png" alt="Amazon-Logo">
+                    </div>
+                    <div class="client">
+                        <img src="img/discord-logo-.png" alt="discord-logo">
+                    </div>
+                    <div class="client">
+                        <img src="img/spotify-logo.png" alt="Spotify-Logo">
+                    </div>
                 </div>
             </div>
     </section>
@@ -294,7 +307,7 @@
     <section>
         <div class="container">
             <div>
-                <div class=" multiple-items">
+                <div class="multiple-items">
                     <div class="carousel-cart">
                         <div class="cart-content">
                             <div class="client-profile">
